# Churn-Modelling

./: README.md  pyproject.toml
data/processed/: cleaned_data.csv
notebook/: data_cleaning.ipynb  data_exploaration.ipynb  data_modelling.ipynb
